main.css
/* ---- Reset  ----*/
/* Eric Meyer's Reset CSS v2.0 - http://cssreset.com */
html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{border:0;font-size:100%;font:inherit;vertical-align:baseline;margin:0;padding:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}table{border-collapse:collapse;border-spacing:0}

/* -------------------------------- */
html {
  min-width: 976px;
}

body {
  font-family: arial,sans-serif;
}

/* ---- Header ---- */

header {
  height: 100px;
}

nav {
  float: right;
}

li {
  margin: 20px 20px  0 0;
  display: inline;
  float: left; 
  margin-left: 1px;
}

nav ul li{
  font-size: 14px;
  color: #444;
}

.apps {
  background: url(google_icons.png) 141px 404px;
  margin-top: -8px;
  padding-top: 0;
  display: block;
  height: 25px;
  width: 25px;
}

.apps:hover {
  background: url(google_icons.png) 103px 440px;
  margin-top: -8px;
  padding-top: 0;
  display: block;
  height: 25px;
  width: 25px;
}

.alert {
  background: url(google_icons.png) 363px -2px;
  margin-top: -8px;
  padding-top: 0;
  display: block;
  height: 25px;
  width: 25px;
}

.alert:hover {
  background: url(google_icons.png) 0 0;
  margin-top: -8px;
  padding-top: 0;
  display: block;
  height: 25px;
  width: 25px;
}

#share-box {
  width:65px;
  height:22px;
  padding:8px 1px 1px 2px;
  margin: 12px 1px;
  background-color: #DEDEDE;
  border-radius: 3px;
  text-align: center;
}
#share-box > a {
  display: block;
  width:100%;
  height: 100%;
}

#share-box:hover {
  background-color: #CDCDCD;
}
#share-box > a:hover {
  text-decoration: none;
  cursor: default;
}




.myPhoto {
  background: url(https://lh4.googleusercontent.com/-38KaK5o4Wbs/AAAAAAAAAAI/AAAAAAAAAAA/sDeFgEyCECs/s30-c/photo.jpg) 0 0;
  height: 30px;
  width: 30px;
  margin-top: -8px;
  padding-top: 0;
  display: block;
}



a {
  text-decoration: none;
  color: #000;

}
a:hover {
  text-decoration: underline;
}


/* ---- Main ---- */

.main {
  margin-top: 90px;
}

.google_logo {
  top: 400px;
  margin: auto;
  clear: both;
  display: block;
}

.search_form {
  display: block;
  padding-right: 35px;
  margin: auto;
  width: 520px;
}

.form_outline {

}

#search_field {
  margin: auto;
  height: 23px;
  width: 550px;
  border: 1px solid rgba(0,0,0,.3);
  background: url() no-repeat;
  margin-bottom: 10px;
}

#submit {
  width: 112px;
  margin: 8px;
  padding: 1px;
  border: 1px solid #EEE;
  background-color: #CCC;
}

.inline_2_buttons {
  display: inline-block;
  font-size: 12px;
  font-weight: bold; 
  text-align: center;
  background-color: #EDEDED;
  padding: 9px 3px 1px 3px;
  border: 1px solid #DDD;
  border-radius: 3px;
  width: 105px;
  height: 18px;
}

.inline_2_buttons:hover {
  box-shadow: 0.5px 1px 0.5px 0.5px #BBB;
}

.click-div {
  display: block;
  height: 100%;
  width: 100%;
  color: #656565; 
}

.click-div:hover {
  text-decoration: none;
}

.under_2_buttons {
  margin: auto;
  padding-top:28px;
  padding-left: 70px;
  font-size: 13px;
}

#search-btn {
  margin-right: 5px;
}

#feel-lucky-btn {
  margin-left: 5px;
}

.center_content {
  margin: auto;
  clear: both;
  display: block;
  margin-top: 0;
  width: 250px;
}

.japanese {
  color: blue;
}


/* ---- Footer ---- */

footer {
  min-width: 976px;
  font-size: 13px;
  position: fixed;
  padding-bottom: 14px;
  bottom:0;
  height: 32px;
  width: 100%;
  background-color: #EFEFEF;
}

footer > ul {
  display: inline;
}

.left_footer {
  margin: 0 0 0 25px;
  float: left;
}

.right_footer  {
  margin: 0 20px 0 0;
  float: right;
}

footer li a{
  font-family: sans-serif;;
  color: #666;
}

span {
  color: #A30000;
  padding-right:3px;
}

